# Soundscape

./: README.md  index.html  package.json
src/: aurora-background.js  caustics-background.js  ink-background.js  main.js  silk-background.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: lib.rs
